[project]
name = "second-vpn"
version = "0.1.0"
description = ""
authors = [
    {name = "mikaohanyan881", email = "mikaohanyan881@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "requests>=2.32.3",
    "apscheduler>=3.11.0,<4.0.0",
    "aiohttp>=3.10.10,<3.11.0",
    "yookassa>=3.5.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false